# APIserver/.docs/api/openapi.yaml
@@ -207,9 +207,11 @@ paths:
                   type: string
                 start:
                   description: 最新のhaikuからN番目を起点とする（デフォルト0）
+                  format: int64
                   type: integer
-                end:
+                stop:
                   description: 最新のhaikuからM番目を終点とする（デフォルト30）
+                  format: int64
                   type: integer
               required:
               - session_id
@@ -547,9 +549,11 @@ components:
           type: string
         start:
           description: 最新のhaikuからN番目を起点とする（デフォルト0）
+          format: int64
           type: integer
-        end:
+        stop:
           description: 最新のhaikuからM番目を終点とする（デフォルト30）
+          format: int64
           type: integer
       required:
       - session_id
