# APIserver/models/model_inline_object_5.go
@@ -5,8 +5,8 @@ type InlineObject5 struct {
 	SessionId string `json:"session_id"`
 
 	// 最新のhaikuからN番目を起点とする（デフォルト0）
-	Start int32 `json:"start,omitempty"`
+	Start int64 `json:"start,omitempty"`
 
 	// 最新のhaikuからM番目を終点とする（デフォルト30）
-	End int32 `json:"end,omitempty"`
+	Stop int64 `json:"stop,omitempty"`
 }
